Update code for lab6